Sum aggregation added

--- a/Web.Statu/Views/Dotace/Index.cshtml
+++ b/Web.Statu/Views/Dotace/Index.cshtml
@@ -77,7 +77,7 @@
 <h2>Ukázky možností</h2>
 <ul>
     <li>
-        <a href="/dotace/hledat?Q=ico:190489">Hledání podle IČO</a>
+        <a href="/dotace/hledat?Q=ico:00190489">Hledání podle IČO</a>
     </li>
     <li>
         <a href="/dotace/hledat?Q=jmeno:'Ředitelství silnic a dálnic ČR'">Hledání podle jména</a>
