--- a/Web.Statu/Views/ApiV1/OCRStat.cshtml
+++ b/Web.Statu/Views/ApiV1/OCRStat.cshtml
@@ -97,11 +97,11 @@
 
 <h3>Žebříček OCR Minion strojů za posledních 24 hodin</h3>
 
-<table class="table  table-hover table-condensed" style="width:auto">
+<table class="table  table-hover table-condensed table-bordered" style="width:auto">
     <thead>
         <tr>
-            <th>Jméno/provozovatel OCR Minion</th>
-            <th>OCR stránek za 24 hod</th>
+            <th style="font-size:120%;padding:15px">Jméno/provozovatel OCR Minion</th>
+            <th style="font-size:120%;padding:15px">OCR stránek za 24 hod</th>
         </tr>
     </thead>
     <tbody>
