lib updates, build fix

--- a/Web.Statu/Views/Manage/ShowClassification.cshtml
+++ b/Web.Statu/Views/Manage/ShowClassification.cshtml
@@ -8,7 +8,7 @@
     try
     {
         sml = HlidacStatu.Lib.Data.Smlouva.Load(Model.Item1);
-        classif = sml?.GetClassification();
+        classif = HlidacStatu.Lib.Data.Smlouva.SClassification.GetClassificationFromServer(sml);
 
     }
     catch (Exception e)
